style fixes; removed horizontal scroll bar

--- a/Documentation/Client/ssur-client/src/app/sidebar/sidebar-content-prof/sidebar-content-prof.component.css
+++ b/Documentation/Client/ssur-client/src/app/sidebar/sidebar-content-prof/sidebar-content-prof.component.css
@@ -1,12 +1,12 @@
-#officeHourDiv {
+/*#officeHourDiv {
   position: relative;
   left: 10px;
- /** width: 390px;**/
+  width: 390px;
   border-bottom: 1px solid #555;
   text-align: center;
   font-family: Roboto, Arial, sans-serif;
 }
-/*#editButton {
+#editButton {
   position: relative;
   float: right;
   right: 5px;
