--- a/Documentation/Client/ssur-client/src/app/sidebar/sidebar.component.css
+++ b/Documentation/Client/ssur-client/src/app/sidebar/sidebar.component.css
@@ -1,9 +1,5 @@
-#sidebar {
-  position: absolute;
-  left: 0;
-  top: 10vh;
- /* width: 400px;*/
-  height: 85vh;
+/*#sidebar {
+
   border-right: 1px solid #555;
   border-bottom: 1px solid #555;
   font-family: Roboto, Arial, sans-serif;
@@ -11,3 +7,4 @@
 h3 {
   text-align: center;
 }
+*/
